[gd_scene load_steps=3 format=3 uid="uid://bdsyjmvhhrl76"]

[ext_resource type="Script" path="res://ui/dialogs/type_change_window.gd" id="1_02ps1"]
[ext_resource type="PackedScene" uid="uid://lru6b2rj8tpn" path="res://ui/component/symbol_edit_interface.tscn" id="2_gopah"]

[node name="TypeChangeWindow" type="Window"]
title = "Select Type & Class"
initial_position = 1
size = Vector2i(589, 150)
wrap_controls = true
script = ExtResource("1_02ps1")

[node name="SymbolEditInterface" parent="." instance=ExtResource("2_gopah")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Type: "

[node name="TypeOptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Class:"

[node name="ClassOptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
clip_text = true

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "23423423423"
placeholder_text = "234234234234234"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 80

[node name="OKButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/TypeOptionButton" to="." method="_on_type_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
